--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <ul class="navigate-list mail">
                 <li class="item"><a class="navigate-mail" href="mailto:info@devstudio.com">
                         <svg class="icon">
-                            <use href=".images/sprite.svg#envelope"></use>
+                            <use href="./images/sprite.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="item"><a class="navigate-phone" href="tel:+380961111111">
                         <svg class="icon-phone">
-                            <use href=".images/sprite.svg#smatrphone"></use>
+                            <use href="./images/sprite.svg#smartphone"></use>
                         </svg>
                         +38 096 111 11 11</a>
                 </li>
@@ -129,159 +129,167 @@
 
                     <li class="item"><img class="image" src="images/ihor_demjanenko.jpg" alt="Игорь Демьяненко"
                             width="270" height="260">
-                        <h3 class="title-team-subject">Игорь Демьяненко</h3>
-                        <p class="title-team-text" lang="en">Product Designer</p>
-                        <ul class="social-list-team">
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#instagram"></use>
-                                    </svg>
+                        <div class="team-container">
+                            <h3 class="title-team-subject">Игорь Демьяненко</h3>
+                            <p class="title-team-text" lang="en">Product Designer</p>
+                            <ul class="social-list-team">
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#twitter"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#facebook"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#linkedin"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item"><img class="image" src="images/olha_repina.jpg" alt="Ольга Репина" width="270"
                             height="260">
-                        <h3 class="title-team-subject">Ольга Репина</h3>
-                        <p class="title-team-text" lang="en">Frontend Developer</p>
-                        <ul class="social-list-team">
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#instagram"></use>
-                                    </svg>
+                        <div class="team-container">
+                            <h3 class="title-team-subject">Ольга Репина</h3>
+                            <p class="title-team-text" lang="en">Frontend Developer</p>
+                            <ul class="social-list-team">
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#twitter"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#facebook"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#linkedin"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item"><img class="image" src="images/nikolai_tarasov.jpg" alt="Николай Тарасов"
                             width="270" height="260">
-                        <h3 class="title-team-subject">Николай Тарасов</h3>
-                        <p class="title-team-text" lang="en">Marketing</p>
-                        <ul class="social-list-team">
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#instagram"></use>
-                                    </svg>
+                        <div class="team-container">
+                            <h3 class="title-team-subject">Николай Тарасов</h3>
+                            <p class="title-team-text" lang="en">Marketing</p>
+                            <ul class="social-list-team">
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#twitter"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#facebook"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#linkedin"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item"><img class="image" src="images/mihail_yarmakov.jpg" alt="Михаил Ярмаков"
                             width="270" height="260">
-                        <h3 class="title-team-subject">Михаил Ермаков</h3>
-                        <p class="title-team-text" lang="en">UI Designer</p>
-                        <ul class="social-list-team">
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#instagram"></use>
-                                    </svg>
+                        <div class="team-container">
+                            <h3 class="title-team-subject">Михаил Ермаков</h3>
+                            <p class="title-team-text" lang="en">UI Designer</p>
+                            <ul class="social-list-team">
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#instagram"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#twitter"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#twitter"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#facebook"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#facebook"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                            <li class="subject">
-                                <a class="circle" href="">
-                                    <svg class="social-icon-team">
-                                        <use href="./images/sprite.svg#linkedin"></use>
-                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="subject">
+                                    <a class="circle-team" href="">
+                                        <svg class="social-icon-team">
+                                            <use href="./images/sprite.svg#linkedin"></use>
+                                        </svg>
 
-                                </a>
-                            </li>
-                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
 
                 </ul>
