--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
     <main>
         <section class="section hero">
             <h1 class="title-hero">Эффективные решения <br> для вашего бизнеса</h1>
-            <button class="hero-button" type="button">Заказать услугу</button>
+            <button data-modal-open class="hero-button" type="button">Заказать услугу</button>
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <button data-modal-close class="close-button">
+                        <svg class="close-icon">
+                            <use href="images/close_2.svg"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
         </section>
         <section class="section">
             <div class="container">
@@ -113,12 +123,36 @@
             <div class="container">
                 <h2 class="title-samples">Чем мы занимаемся</h2>
                 <ul class="samples-list">
-                    <li class="item"><a class="title-samples-link" href=""><img src="images/laptop_picture.jpg"
-                                width="370" height="294" alt="работа на ноутбуке"> </a></li>
-                    <li class="item"><a class="title-samples-link" href=""><img src="images/phone_picture.jpg"
-                                width="370" height="294" alt="осмотр макета на ноутбуке"> </a></li>
-                    <li class="item"><a class="title-samples-link" href=""><img src="images/ipad_picture.jpg"
-                                width="370" height="294" alt="палитра цветов на планшете"> </a></li>
+                    <li class="item"><a class="title-samples-link" href="">
+                            <div class="image-container">
+                                <img class="image" src="images/laptop_picture.jpg" width="370" height="294"
+                                    alt="работа на ноутбуке">
+                                <div class="image-description">
+                                    <p class="text-description">Десктопные приложения</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item"><a class="title-samples-link" href="">
+                            <div class="image-container">
+                                <img class="image" src="images/phone_picture.jpg" width="370" height="294"
+                                    alt="осмотр макета на ноутбуке">
+                                <div class="image-description">
+                                    <p class="text-description">Мобильные приложения</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item"><a class="title-samples-link" href="">
+                            <div class="image-container">
+                                <img class="image" src="images/ipad_picture.jpg" width="370" height="294"
+                                    alt="палитра цветов на планшете">
+                                <div class="image-description">
+                                    <p class="text-description">Дизайнерские решения</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
 
                 </ul>
             </div>
@@ -406,6 +440,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
