--- a/portfolio.html
+++ b/portfolio.html
@@ -60,19 +60,19 @@
                     </li>
                     <li class="item"> <button class="button-list-item" type="button">Маркетинг</button>
                     </li>
-
+        
                 </ul>
                 <ul class="projects-section-title-samples">
                     <li class="item">
-
+        
                         <a class="link" href="">
                             <div class="image-thumb">
                                 <img class="image" src="./images/project_1.jpg" width="370" height="294"
                                     alt="Веб-сайт на ноутбуке">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании
-                                        используют эту платформу для цифрового
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
@@ -84,8 +84,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_2.jpg" width="370" height="294"
-                                alt="Постер по баскетболу">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_2.jpg" width="370" height="294"
+                                    alt="Постер по баскетболу">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Постер <span class="span" lang="en">New
                                         Orlean vs Golden Star</span></h2>
@@ -94,8 +104,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_3.jpg" width="370" height="294"
-                                alt="Иконка приложения для ресторана">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_3.jpg" width="370" height="294"
+                                    alt="Иконка приложения для ресторана">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
                                 <p class="portfolio-title-samples-text">Приложение</p>
@@ -103,8 +123,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_4.jpg" width="370" height="294"
-                                alt="Проект для наушников">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_4.jpg" width="370" height="294"
+                                    alt="Проект для наушников">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
                                 <p class="portfolio-title-samples-text">Маркетинг</p>
@@ -112,8 +142,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_5.jpg" width="370" height="294"
-                                alt="Проект для коробок">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_5.jpg" width="370" height="294"
+                                    alt="Проект для коробок">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Boxes</span></h2>
                                 <p class="portfolio-title-samples-text">Приложение</p>
@@ -121,8 +161,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_6.jpg" width="370" height="294"
-                                alt="Веб-сайт на моноблоке">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_6.jpg" width="370" height="294"
+                                    alt="Веб-сайт на моноблоке">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
                                 <p class="portfolio-title-samples-text">Веб-сайт</p>
@@ -130,8 +180,17 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_7.jpg" width="370" height="294"
-                                alt="Разворот книги">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited
                                         Edition</span></h2>
@@ -140,8 +199,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_8.jpg" width="370" height="294"
-                                alt="Маркетинговый проект">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_8.jpg" width="370" height="294"
+                                    alt="Маркетинговый проект">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
                                 <p class="portfolio-title-samples-text">Маркетинг</p>
@@ -149,8 +218,18 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a class="link" href=""><img class="image" src="./images/project_9.jpg" width="370" height="294"
-                                alt="Приложение для ноутбука">
+                        <a class="link" href="">
+                            <div class="image-thumb">
+                                <img class="image" src="./images/project_9.jpg" width="370" height="294"
+                                    alt="Приложение для ноутбука">
+                                <div class="portfolio-image-description">
+                                    <p class="portfolio-image-description-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Growing Business</h2>
                                 <p class="portfolio-title-samples-text">Приложение</p>
